# waybar-bluetooth_battery_parse

./: .gitignore  CMakeLists.txt  README.md  bluetooth_battery_parse.c  waybar-bluetooth_battery_parse.c
other/: bluetooth_battery_parse.py
src/: waybar-bluetooth_battery_parse.c
